--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-select": "^5.9.0",
+    "react-slick": "^0.30.3",
     "recharts": "^2.15.0",
+    "slick-carousel": "^1.8.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
